Third refactoring of: - src/main/java/de/tum/cit/ase/ares/api/securitytest