@@ -1,12 +1,11 @@
 package de.tum.cit.ase.ares.api.securitytest.java.essentialModel;
 
 import com.google.common.collect.Streams;
-import de.tum.cit.ase.ares.api.policy.policySubComponents.FilePermission;
 
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Represents the essential packages required for the security test.
@@ -15,11 +14,18 @@ import java.util.stream.Collectors;
  * It provides a method to aggregate all these packages into a single list.</p>
  *
  * <p>Design Rationale: Grouping essential package lists into a record leverages immutability and clear data encapsulation,
- * thereby facilitating streamlined configuration and security testing.</p>
+ * facilitating streamlined configuration and security testing.</p>
  *
  * @since 2.0.0
  * @author Markus Paulsen
  * @version 2.0.0
+ * @param essentialJavaPackages the essential Java packages
+ * @param essentialArchUnitPackages the essential ArchUnit packages
+ * @param essentialWalaPackages the essential Wala packages
+ * @param essentialAspectJPackages the essential AspectJ packages
+ * @param essentialInstrumentationPackages the essential Instrumentation packages
+ * @param essentialAresPackages the essential Ares packages
+ * @param essentialJUnitPackages the essential JUnit packages
  */
 public record EssentialPackages(
         @Nonnull List<String> essentialJavaPackages,
@@ -63,7 +69,7 @@ public record EssentialPackages(
                 essentialInstrumentationPackages.stream(),
                 essentialAresPackages.stream(),
                 essentialJUnitPackages.stream()
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     /**
@@ -81,112 +87,126 @@ public record EssentialPackages(
         /**
          * Essential Java packages.
          */
+        @Nullable
         private List<String> essentialJavaPackages;
 
         /**
          * Essential ArchUnit packages.
          */
+        @Nullable
         private List<String> essentialArchUnitPackages;
 
         /**
          * Essential Wala packages.
          */
+        @Nullable
         private List<String> essentialWalaPackages;
 
         /**
          * Essential AspectJ packages.
          */
+        @Nullable
         private List<String> essentialAspectJPackages;
 
         /**
          * Essential Instrumentation packages.
          */
+        @Nullable
         private List<String> essentialInstrumentationPackages;
 
         /**
          * Essential Ares packages.
          */
+        @Nullable
         private List<String> essentialAresPackages;
 
         /**
          * Essential JUnit packages.
          */
+        @Nullable
         private List<String> essentialJUnitPackages;
 
         /**
-         * Sets the essential Java packages.
+         * Configures the essential Java packages.
          *
          * @param essentialJavaPackages the essential Java packages
          * @return the Builder instance
          */
-        public Builder essentialJavaPackages(List<String> essentialJavaPackages) {
-            this.essentialJavaPackages = essentialJavaPackages;
+        @Nonnull
+        public Builder essentialJavaPackages(@Nonnull List<String> essentialJavaPackages) {
+            this.essentialJavaPackages = Objects.requireNonNull(essentialJavaPackages, "essentialJavaPackages must not be null");
             return this;
         }
 
         /**
-         * Sets the essential ArchUnit packages.
+         * Configures the essential ArchUnit packages.
          *
          * @param essentialArchUnitPackages the essential ArchUnit packages
          * @return the Builder instance
          */
-        public Builder essentialArchUnitPackages(List<String> essentialArchUnitPackages) {
-            this.essentialArchUnitPackages = essentialArchUnitPackages;
+        @Nonnull
+        public Builder essentialArchUnitPackages(@Nonnull List<String> essentialArchUnitPackages) {
+            this.essentialArchUnitPackages = Objects.requireNonNull(essentialArchUnitPackages, "essentialArchUnitPackages must not be null");
             return this;
         }
 
         /**
-         * Sets the essential Wala packages.
+         * Configures the essential Wala packages.
          *
          * @param essentialWalaPackages the essential Wala packages
          * @return the Builder instance
          */
-        public Builder essentialWalaPackages(List<String> essentialWalaPackages) {
-            this.essentialWalaPackages = essentialWalaPackages;
+        @Nonnull
+        public Builder essentialWalaPackages(@Nonnull List<String> essentialWalaPackages) {
+            this.essentialWalaPackages = Objects.requireNonNull(essentialWalaPackages, "essentialWalaPackages must not be null");
             return this;
         }
 
         /**
-         * Sets the essential AspectJ packages.
+         * Configures the essential AspectJ packages.
          *
          * @param essentialAspectJPackages the essential AspectJ packages
          * @return the Builder instance
          */
-        public Builder essentialAspectJPackages(List<String> essentialAspectJPackages) {
-            this.essentialAspectJPackages = essentialAspectJPackages;
+        @Nonnull
+        public Builder essentialAspectJPackages(@Nonnull List<String> essentialAspectJPackages) {
+            this.essentialAspectJPackages = Objects.requireNonNull(essentialAspectJPackages, "essentialAspectJPackages must not be null");
             return this;
         }
 
         /**
-         * Sets the essential Instrumentation packages.
+         * Configures the essential Instrumentation packages.
          *
          * @param essentialInstrumentationPackages the essential Instrumentation packages
          * @return the Builder instance
          */
-        public Builder essentialInstrumentationPackages(List<String> essentialInstrumentationPackages) {
-            this.essentialInstrumentationPackages = essentialInstrumentationPackages;
+        @Nonnull
+        public Builder essentialInstrumentationPackages(@Nonnull List<String> essentialInstrumentationPackages) {
+            this.essentialInstrumentationPackages = Objects.requireNonNull(essentialInstrumentationPackages, "essentialInstrumentationPackages must not be null");
             return this;
         }
 
         /**
-         * Sets the essential Ares packages.
+         * Configures the essential Ares packages.
          *
          * @param essentialAresPackages the essential Ares packages
          * @return the Builder instance
          */
-        public Builder essentialAresPackages(List<String> essentialAresPackages) {
-            this.essentialAresPackages = essentialAresPackages;
+        @Nonnull
+        public Builder essentialAresPackages(@Nonnull List<String> essentialAresPackages) {
+            this.essentialAresPackages = Objects.requireNonNull(essentialAresPackages, "essentialAresPackages must not be null");
             return this;
         }
 
         /**
-         * Sets the essential JUnit packages.
+         * Configures the essential JUnit packages.
          *
          * @param essentialJUnitPackages the essential JUnit packages
          * @return the Builder instance
          */
-        public Builder essentialJUnitPackages(List<String> essentialJUnitPackages) {
-            this.essentialJUnitPackages = essentialJUnitPackages;
+        @Nonnull
+        public Builder essentialJUnitPackages(@Nonnull List<String> essentialJUnitPackages) {
+            this.essentialJUnitPackages = Objects.requireNonNull(essentialJUnitPackages, "essentialJUnitPackages must not be null");
             return this;
         }
 
@@ -195,15 +215,16 @@ public record EssentialPackages(
          *
          * @return the EssentialPackages instance
          */
+        @Nonnull
         public EssentialPackages build() {
             return new EssentialPackages(
-                    essentialJavaPackages,
-                    essentialArchUnitPackages,
-                    essentialWalaPackages,
-                    essentialAspectJPackages,
-                    essentialInstrumentationPackages,
-                    essentialAresPackages,
-                    essentialJUnitPackages
+                    Objects.requireNonNull(essentialJavaPackages, "essentialJavaPackages must not be null"),
+                    Objects.requireNonNull(essentialArchUnitPackages, "essentialArchUnitPackages must not be null"),
+                    Objects.requireNonNull(essentialWalaPackages, "essentialWalaPackages must not be null"),
+                    Objects.requireNonNull(essentialAspectJPackages, "essentialAspectJPackages must not be null"),
+                    Objects.requireNonNull(essentialInstrumentationPackages, "essentialInstrumentationPackages must not be null"),
+                    Objects.requireNonNull(essentialAresPackages, "essentialAresPackages must not be null"),
+                    Objects.requireNonNull(essentialJUnitPackages, "essentialJUnitPackages must not be null")
             );
         }
     }
